lib_LIBRARIES = libmmpbsa.a
libmmpbsa_adir=$(libdir)
libmmpbsa_a_CPPFLAGS = $(XML_CPPFLAGS) -I$(MEAD_PATH)/include/ -I../
libmmpbsa_a_SOURCES = EmpEnerFun.cpp EnergyInfo.cpp MeadInterface.cpp mmpbsa_exceptions.cpp mmpbsa_utils_templates.cpp mmpbsa_utils.cpp mmpbsa_io.cpp StringTokenizer.cpp XMLParser.cpp
